# InRanker

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
distillranker/: __init__.py  base.py  rankers.py
docs/: CHANGELOG.md  training.md
inranker/: __init__.py  rankers.py  retriever.py
inranker/training/: __init__.py  trainer.py  utils.py
